bug-fixing: horizontal scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -39,29 +39,41 @@ onderin: #d7e4f5;
  */
 
 body, html {
+
   margin: 0;
   padding: 0 7px;
   width: 100%;
   height: 100%;
+ overflow-x: hidden;
 
 }
 
 body {
 
-  background-position: center top;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  font-family: 'Roboto', sans-serif;  */
+
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.2em;
- /* background-color: rgba(71, 148, 223, .25); */
   color: #424242;
 }
 
-  main, .inhoud {
-      max-width: 1200px;
-      margin-left: auto;
+.background {
+    margin-left: auto;
       margin-right: auto;
+  background-image: url(../images/openingspagina_large.png);
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+   background-position: center top;
+
+  background-size: 100%;
+  max-width: 1400px;
+
+}
+
+  main{
+    max-width: 1200px;
+
+
     }
 
     .nav {
@@ -92,7 +104,7 @@ h1 {
 .groep4 h3, .groep6 h3 {
   font-family: 'Oswald', sans-serif;
   font-weight: 500;
-  font-variant: uppercase;
+  text-transform: uppercase;
 }
 
 .transfer span {
@@ -163,7 +175,7 @@ img, embed, object, video {
 
 button  {
 	min-width: 48px;
-	min-height: 40x;
+	min-height: 40px;
 	border-radius: 15px;
 	background-color: #4794df;
 	padding: 1.5em;
@@ -315,7 +327,7 @@ h2.reis__kop {
 }
 
 .nav__list {
-  width: 710%;
+  width: 100%;
   padding: 0;
   margin: 0;
 }
@@ -357,7 +369,7 @@ h2.reis__kop {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
   font-size: 12px;
-  white-space:
+
 
 }
 
@@ -428,7 +440,7 @@ main {
 onderdelen met beeld
 */
    .beeldBoven {
-    width: 70%;
+    /* width: 70%;  */
     max-width: 100%;
    }
 
@@ -650,7 +662,7 @@ td:last-of-type {
 .details li {
 
   list-style-position: inside;
-  white-space: wrap;
+  /*white-space: wrap; */
 
 }
 
